--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,16 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
     "formik": "^2.2.9",
     "formik-material-ui": "^4.0.0-alpha.2",
+    "mdb-react-ui-kit": "^6.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "styled-components": "^5.3.10",
     "yup": "^1.1.1"
   },
   "devDependencies": {
