--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
+    "cheerio": "^1.0.0-rc.12",
     "formik": "^2.2.9",
     "formik-material-ui": "^4.0.0-alpha.2",
     "mdb-react-ui-kit": "^6.0.0",
